# astar

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md
benches/: bench_python.py  mesh_display.py  path_display.py  pond_mesh.py
cmake/: AstarConfig.cmake.in
include/astar/: heuristics.h  mesh.h  vertex.h
python_package/: CMakeLists.txt  bindings.cpp
src/: CMakeLists.txt  astar.cpp  astar.h  connectivity_map.cpp  connectivity_map.h  edge_map.cpp  edge_map.h  face.h  heuristics.cpp  heuristics.h  norms.cpp  norms.h  path.h
tests/: CMakeLists.txt  astar_test.cpp  connectivity_map_test.cpp  edge_map_test.cpp  helpers.cpp  helpers.h  heuristics_test.cpp  norms_test.cpp
